# cognitio

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN-v1.md  DESIGN.md  Justfile  NEXT_STEPS.md  README.md  REVIEW-cc.md  REVIEW-codebase-memory-mcp.md  REVIEW-codex-v2.md  REVIEW-codex.md  REVIEW-phase0.md  REVIEW-phase1.md  compose.yaml  conftest.py  pyproject.toml
.github/workflows/: ci.yml
adr/: 0001-postgres-over-neo4j.md  0002-extraction-schema-v1.md  0003-no-materialized-related-to-edges.md  0004-acl-inherited-union.md  0005-no-auto-promote-in-phase1.md  README.md
apps/worker/: pyproject.toml
apps/worker/src/cognitio_worker/: __init__.py  main.py
docker/initdb/: 01-create-test-database.sql  02-create-extensions.sh
tests/: factories.py  test_boundaries.py  test_factories.py
tests/integration/: test_database.py
