[project]
name = "cognitio-worker"
version = "0.1.0"
description = "Cognitio pipeline worker process."
requires-python = ">=3.12"
dependencies = [
    "cognitio-storage",
    "cognitio-connectors",
    "cognitio-pipeline",
    "cognitio-extraction",
]

[project.scripts]
cognitio-worker = "cognitio_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognitio_worker"]
